# rk_selenium

./: README.md  pyproject.toml  pytest.ini
.circleci/: config.yml
app/: sauce_demo.py  sauce_demo_login.py  sauce_demo_product.py
app/support/: base_config.py  login.py  login_functions.py  product.py
