[tool.poetry]
name = "rk_selenium"
version = "0.1.0"
description = "Selenium demo using python3"
authors = ["Rob K <robert.kazirut@gmail.com>"]
license = "none"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
pytest-xdist = "^2.5.0"
selenium = "^4.1.5"
autopep8 = "^1.6.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
